--- a/frmAnnotate.resx
+++ b/frmAnnotate.resx
@@ -1689,4 +1689,100 @@
         DhWpfKUCnc3kShy5xmxx6MxFoTMWBf+/rdIV2VrrDl0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pnlBC.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlBN.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlLL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlRL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlSNR.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlBL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlTL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlSNL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlSFR.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlSFL.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlE2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pnlE1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAIZJREFUSEvtz0EOgCAMAEF/xtN4em3xYmC1hEA9yGHULEL1EJFPYIyAMQLGCBgj
+        YHTlrFd9tHu91gmjaw8egNG1Bw/A6Fo22A58k5K+pa/andZr9fnX7jaWPJNea00o6Kvvlv2xxw6zrQ+H
+        9sDo2oMHYHTtwQMwuv43eAKMETBGwBgB43pynAY7WOp3oG1DAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
